--- a/index.html
+++ b/index.html
@@ -183,6 +183,6 @@
     </div>
 
     <!-- JavaScript link -->
-    <script src="script.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
