--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
         /* Override for color input field */
         .color-input-row input[type="text"] {
           margin-bottom: 0;
-        }
+        @keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
     </style>
 </head>
 <body>
