Update index.html - Title

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </style>
 </head>
 <body>
-    <h1>PDF & Web Tools</h1>
+    <h1>Salesbuildr Widget Template Tools</h1>
     
     <!-- Tab Navigation -->
     <div class="tabs">
