--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
     
     <!-- Tab Navigation -->
     <div class="tabs">
-        <button class="tab-button active" data-tab="extractor">PDF Text Extractor</button>
+        <button class="tab-button active" data-tab="extractor">Cover Page Creator</button>
         <button class="tab-button" data-tab="widget">Widget Creator</button>
     </div>
     
