--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     
     <!-- Widget Creator Tab -->
     <div id="widget" class="tab-content">
-        <p>Create HTML widgets with content from websites or your own custom content.</p>
+        <p>Create widgets using content from websites or biuild custom content. Paste HTML code into Salesbuildr. </p>
         
         <div class="container">
             <div class="widget-form">
