--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
     
     <!-- Widget Creator Tab -->
     <div id="widget" class="tab-content">
-        <p>Create widgets using content from websites or build custom content. Paste HTML code into Salesbuildr.</p>
+        <p>Create widgets using content from your own websites or manufacturers' product pages to build widget. Paste HTML code into Salesbuildr.</p>
         
         <div class="container">
             <div class="widget-form">
