--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
     
     <!-- Matrix Builder Tab -->
     <div id="matrix" class="tab-content">
-        <p>Create comparison tables and feature matrices for your products and services.</p>
+        <p>Create comparison tables and feature matrices for your products and services. Match table colors to you branding!</p>
         
         <div class="container">
             <div class="matrix-form">
