--- a/index.html
+++ b/index.html
@@ -327,10 +327,12 @@
 
             <!-- Output with Preview above HTML Code -->
             <div class="output-container">
-                <div class="preview-section">
-                    <h3>Content Preview</h3>
-                    <div class="preview-container" id="content-preview"></div>
-                </div>
+               <div class="preview-section">
+    <h3>Content Preview</h3>
+    <div id="ai-preview-wrapper" style="width: 100%; max-width: 100%; box-sizing: border-box; background: white; border-radius: 4px; padding: 20px;">
+        <div id="content-preview" style="width: 100%; display: block; margin: 0; padding: 0;"></div>
+    </div>
+</div>
 
                 <div class="html-output-section">
                     <div class="code-header">
