--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 <body>
     <h1>Salesbuildr Widget Template Tools</h1>
     
-    <!-- Tab Navigation -->
-    <div class="tabs">
-        <button class="tab-button active" data-tab="extractor">Cover Page Creator</button>
-        <button class="tab-button" data-tab="widget">Widget Creator</button>
-        <button class="tab-button" data-tab="matrix">Matrix Builder</button>
-        <button class="tab-button" data-tab="ai-generator">AI Content Generator</button>
-    </div>
+  <!-- Tab Navigation -->
+<div class="tabs">
+    <button class="tab-button" data-tab="extractor" style="display: none;">Cover Page Creator</button>
+    <button class="tab-button active" data-tab="widget">Widget Creator</button>
+    <button class="tab-button" data-tab="matrix">Matrix Builder</button>
+    <button class="tab-button" data-tab="ai-generator">AI Content Generator</button>
+</div>
     
     <!-- PDF Text Extractor Tab -->
     <div id="extractor" class="tab-content active">
