--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <button class="tab-button active" data-tab="widget">Widget Creator</button>
     <button class="tab-button" data-tab="matrix">Matrix Builder</button>
     <button class="tab-button" data-tab="ai-generator">AI Content Generator</button>
+    <button class="tab-button" data-tab="process-builder">Process Builder</button>
 </div>
     
     <!-- PDF Text Extractor Tab -->
