--- a/index.html
+++ b/index.html
@@ -436,11 +436,12 @@
         </div>
     </div>
 </div>  
-    <!-- JavaScript Files -->
+<!-- JavaScript Files -->
     <script src="scripts/main.js"></script>
     <script src="scripts/cover-page-creator.js"></script>
     <script src="scripts/widget-creator.js"></script>
     <script src="scripts/matrix-builder.js"></script>
     <script src="scripts/ai-generator.js"></script>
+    <script src="scripts/process-builder.js"></script>
 </body>
 </html>
