--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/widget-creator.css">
     <link rel="stylesheet" href="styles/matrix-builder.css">
     <link rel="stylesheet" href="styles/ai-generator.css">
+    <link rel="stylesheet" href="styles/process-builder.css">
 </head>
 <body>
     <h1>Salesbuildr Widget Template Tools</h1>
