--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.worker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     
-    <!-- CSS Files -->
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/cover-page-creator.css">
-    <link rel="stylesheet" href="styles/widget-creator.css">
-    <link rel="stylesheet" href="styles/matrix-builder.css">
-    <link rel="stylesheet" href="styles/ai-generator.css">
-    <link rel="stylesheet" href="styles/process-builder.css">
+ <!-- CSS Files -->
+<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="styles/cover-page-creator.css">
+<link rel="stylesheet" href="styles/widget-creator.css">
+<link rel="stylesheet" href="styles/matrix-builder.css">
+<link rel="stylesheet" href="styles/ai-generator.css">
+<link rel="stylesheet" href="styles/process-builder.css">
+<link rel="stylesheet" href="styles/sow-creator.css">
 </head>
 <body>
     <h1>Salesbuildr Widget Template Tools</h1>
