--- a/tickets.html
+++ b/tickets.html
@@ -329,7 +329,7 @@
         const categories = [
             'Quotes', 'Opportunities', 'Integrations', 'Templates', 
             'Products', 'Categories', 'How to Questions', 'Bugs', 
-            'Email', 'Companies', 'Contacts', 'Platform', 'Users'
+            'Email', 'Companies', 'Contacts', 'Platform', 'Users', 'Procurement'
         ];
         
         let currentSession = {};
