--- a/customer-management/index.html
+++ b/customer-management/index.html
@@ -66,6 +66,18 @@
         <div class="flex flex-grow overflow-hidden">
             <!-- Company List -->
             <div class="w-64 bg-white shadow-md overflow-y-auto">
+                <!-- Status Filter Buttons -->
+                <div class="p-3 border-b bg-gray-50">
+                    <div class="text-xs font-medium text-gray-500 mb-2">Filter by Status</div>
+                    <div class="flex flex-wrap">
+                        <button id="filter-all-companies" class="px-3 py-1 text-xs bg-blue-500 text-white rounded mr-1 mb-1">All</button>
+                        <button id="filter-onboarding" class="px-3 py-1 text-xs bg-gray-200 text-gray-700 rounded mr-1 mb-1 hover:bg-gray-300">Onboarding</button>
+                        <button id="filter-active" class="px-3 py-1 text-xs bg-gray-200 text-gray-700 rounded mr-1 mb-1 hover:bg-gray-300">Active</button>
+                        <button id="filter-pre-sales" class="px-3 py-1 text-xs bg-gray-200 text-gray-700 rounded mr-1 mb-1 hover:bg-gray-300">Pre-Sales</button>
+                        <button id="filter-churned" class="px-3 py-1 text-xs bg-gray-200 text-gray-700 rounded mr-1 mb-1 hover:bg-gray-300">Churned</button>
+                    </div>
+                </div>
+                
                 <ul id="company-list"></ul>
                 <div id="no-companies" class="p-4 text-gray-500 text-center hidden">No companies found</div>
             </div>
@@ -185,6 +197,19 @@
                                     <option value="Standard">Standard</option>
                                     <option value="Advanced">Advanced</option>
                                     <option value="Premium">Premium</option>
+                                </select>
+                            </div>
+
+                            <div>
+                                <label class="block text-sm font-medium text-gray-700 mb-1">Status</label>
+                                <select
+                                    id="new-company-status"
+                                    class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                >
+                                    <option value="pre-sales">Pre-Sales</option>
+                                    <option value="onboarding">Onboarding</option>
+                                    <option value="active">Active</option>
+                                    <option value="churned">Churned</option>
                                 </select>
                             </div>
 
@@ -311,6 +336,13 @@
                                 <div>
                                     <dt class="text-sm font-medium text-gray-500">PSA</dt>
                                     <dd class="mt-1" id="company-psa"></dd>
+                                </div>
+
+                                <div>
+                                    <dt class="text-sm font-medium text-gray-500">Status</dt>
+                                    <dd class="mt-1">
+                                        <span id="company-status" class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium"></span>
+                                    </dd>
                                 </div>
 
                                 <div>
@@ -459,6 +491,19 @@
                                         <option value="Standard">Standard</option>
                                         <option value="Advanced">Advanced</option>
                                         <option value="Premium">Premium</option>
+                                    </select>
+                                </div>
+
+                                <div>
+                                    <label class="block text-sm font-medium text-gray-700 mb-1">Status</label>
+                                    <select
+                                        id="edit-company-status"
+                                        class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
+                                    >
+                                        <option value="pre-sales">Pre-Sales</option>
+                                        <option value="onboarding">Onboarding</option>
+                                        <option value="active">Active</option>
+                                        <option value="churned">Churned</option>
                                     </select>
                                 </div>
 
